# ArbBot

./: CMakeLists.txt  Dockerfile  README.md  arb.sln  arb.vcxproj  arb.vcxproj.filters  config.json
src/brest/: CMakeLists.txt  brestclient.cc  brestclient.h
src/bws/: CMakeLists.txt  bwsclient.cc  bwsclient.h
src/example/: CMakeLists.txt  arb.cc  arbtest.cc
src/rest/: restclient.cc  restclient.h
src/utilrest/: CMakeLists.txt  Encoding.h  HTTP.cc  HTTP.h  Time.h
src/utilws/: CMakeLists.txt  Encoding.h  Time.h  WS.cc  WS.h
src/ws/: wsclient.cc  wsclient.h
